<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Dream Diary</string>
  <string name="day_title">Day record</string>
  <string name="dream_title">Dream record</string>
  <string name="ok">OK</string>
  <string name="calendar_title">Calendar</string>
  <string name="monday">M</string>
  <string name="tuesday">T</string>
  <string name="wednesday">W</string>
  <string name="thursday">T</string>
  <string name="friday">F</string>
  <string name="saturday">S</string>
  <string name="sunday">S</string>
  <string name="january">JANUARY</string>
  <string name="february">FEBRUARY</string>
  <string name="march">MARCH</string>
  <string name="april">APRIL</string>
  <string name="may">MAY</string>
  <string name="june">JUNE</string>
  <string name="july">JULY</string>
  <string name="august">AUGUST</string>
  <string name="september">SEPTEMBER</string>
  <string name="october">OCTOBER</string>
  <string name="november">NOVEMBER</string>
  <string name="december">DECEMBER</string>
</resources>
