<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="@drawable/calendar_grid_background"
  app:backgroundTint="@color/translucent"
  android:foregroundGravity="center_horizontal"
  android:paddingTop="30dp">
  
  <!-- Divider -->
  <View
    android:id="@+id/afterMonthSliderDivider"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginStart="22dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="22dp"
    android:background="@color/divider_gray"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
  <!-- / Divider -->
  
  <!-- Week days -->
  <androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/weekDaysLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/afterMonthSliderDivider">
    
    <!-- Monday -->
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/monday"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textSize="16sp"
      android:textStyle="normal"
      app:fontFamily="sans-serif-medium"
      android:gravity="center_horizontal"
      android:textColor="@color/gray"
      android:text="@string/monday" />
    <!-- / Monday -->
    
    <!-- Tuesday -->
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tuesday"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textSize="16sp"
      android:textStyle="normal"
      app:fontFamily="sans-serif-medium"
      android:gravity="center_horizontal"
      android:textColor="@color/gray"
      android:text="@string/tuesday" />
    <!-- / Tuesday -->
    
    <!-- Wednesday -->
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/wednesday"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textSize="16sp"
      android:textStyle="normal"
      app:fontFamily="sans-serif-medium"
      android:gravity="center_horizontal"
      android:textColor="@color/gray"
      android:text="@string/wednesday" />
    <!-- / Wednesday -->
    
    <!-- Thursday -->
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/thursday"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textSize="16sp"
      android:textStyle="normal"
      app:fontFamily="sans-serif-medium"
      android:gravity="center_horizontal"
      android:textColor="@color/gray"
      android:text="@string/thursday" />
    <!-- / Thursday -->
    
    <!-- Friday -->
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/friday"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textSize="16sp"
      android:textStyle="normal"
      app:fontFamily="sans-serif-medium"
      android:gravity="center_horizontal"
      android:textColor="@color/gray"
      android:text="@string/friday" />
    <!-- / Friday -->
    
    <!-- Saturday -->
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/saturday"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textSize="16sp"
      android:textStyle="normal"
      app:fontFamily="sans-serif-medium"
      android:gravity="center_horizontal"
      android:textColor="@color/gray"
      android:text="@string/saturday" />
    <!-- / Saturday -->
    
    <!-- Sunday -->
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/sunday"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textSize="16sp"
      android:textStyle="normal"
      app:fontFamily="sans-serif-medium"
      android:gravity="center_horizontal"
      android:textColor="@color/gray"
      android:text="@string/sunday" />
    <!-- / Sunday -->
  
  </androidx.appcompat.widget.LinearLayoutCompat>
  <!-- / Week days -->
  
  <!-- Month days -->
  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/monthDaysRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    
    android:numColumns="7"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/weekDaysLinearLayout"/>
  <!-- / Month days -->
    
  
</androidx.constraintlayout.widget.ConstraintLayout>